# arcjet-py

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  renovate.json  witgen.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml  lint-workflows.yml  release.yml
arcjet-analyze/: AGENTS.md  WASMTIME.md  WITGEN.md  filter.wit  filter_component.py  hacky-wasmtime-filter-rule.py  pyproject.toml
arcjet-analyze/arcjet_analyze/: __init__.py  _component.py  _convert.py  _imports.py  _overrides.py  _singleton.py  _types.py
arcjet-analyze/bindings/: README.md
arcjet-analyze/bindings/componentize_py_async_support/: futures.py
arcjet-analyze/bindings/wit_world/: __init__.py
arcjet-analyze/bindings/wit_world/imports/: filter_overrides.py
arcjet-analyze/tests/: conftest.py  test_detect_bot.py  test_fingerprint.py  test_imports.py  test_match_filters.py  test_sensitive_info.py  test_singleton.py  test_validate_characteristics.py  test_validate_email.py
benchmarks/: bench_serialization.py  bench_wasm_init.py  bench_wasm_per_call.py  conftest.py
docs/: WASMTIME.md  WITGEN.md
examples/fastapi/: README.md  example.env  main.py  pyproject.toml
examples/fastapi-langchain/: README.md  example.env  main.py  pyproject.toml
examples/flask/: README.md  example.env  main.py  pyproject.toml
examples/flask-langchain/: README.md  main.py  pyproject.toml
src/arcjet/: __init__.py  _cache.py  _client.py  _context.py  _convert.py  _decision.py  _enums.py  _errors.py  _local.py  _rules.py  cache.py  client.py  context.py  dataclasses.py  decision.py  rules.py
src/arcjet/_analyze/: _component.py  _convert.py  _import_defaults.py  _imports.py  _overrides.py  _singleton.py  _types.py
src/arcjet/_analyze/wasm/: arcjet_analyze_js_req.component.wasm
src/arcjet/guard/: __init__.py  _client.py  _convert.py  _local.py  _types.py  client.py  convert.py  rules.py  types.py
src/arcjet/guard/_rules/: __init__.py  _base.py  _custom.py  _moderate_content.py  _prompt_injection.py  _rate_limit.py  _sensitive_info.py
src/arcjet/guard/proto/decide/v2/: decide_connect.py  decide_pb2.py  decide_pb2.pyi
src/arcjet/guard/rules/: __init__.py  _base.py  _custom.py  _prompt_injection.py  _rate_limit.py  _sensitive_info.py
src/arcjet/proto/decide/v1alpha1/: decide_connect.py  decide_pb2.py  decide_pb2.pyi
src/proto/decide/v1alpha1/: decide_connect.py
tests/: README.md  TESTING_PATTERNS.md  conftest.py  helpers.py  smoke_guard.py  test_cache.py  test_client_helpers.py  test_client_sync.py  test_context.py  test_convert.py  test_decision.py  test_enums.py  test_filter.py  test_guard.py  test_local.py  test_rules.py  test_sensitive_info.py
tests/analyze/: conftest.py  test_detect_bot.py  test_fingerprint.py  test_imports.py  test_match_filters.py  test_sensitive_info.py  test_singleton.py  test_validate_characteristics.py  test_validate_email.py
tests/benchmarks/: bench_local_evaluators.py  bench_protect.py  bench_serialization.py  bench_wasm_init.py  bench_wasm_per_call.py  conftest.py
tests/fastapi/: conftest.py  test_fastapi.py  test_reason_v2.py
tests/fixtures/: __init__.py  protobuf_stubs.py
tests/flask/: conftest.py  test_flask.py
tests/integration/guard/: test_client.py  test_e2e.py
tests/mocked/: README.md  conftest.py  test_cache.py  test_client_async.py  test_client_sync.py  test_context.py  test_decision.py  test_enums.py  test_logging.py  test_rules.py
tests/unit/: conftest.py  test_cache.py  test_client_async.py  test_client_sync.py  test_context.py  test_context_extras.py  test_decision.py  test_enums.py  test_logging.py  test_proxy_env.py  test_rules.py  test_typeid.py
tests/unit/guard/: conftest.py  test_convert.py  test_custom.py  test_local.py  test_rules.py
tools/: griffe_extensions.py
tools/witgen/: __init__.py  __main__.py  config.py  generate.py  ir.py  naming.py  wit_parser.py
tools/witgen/generators/: __init__.py  component.py  convert.py  helpers.py  imports.py  init.py  types.py
tools/witgen/tests/: test_wit_parser.py
