[project]
name = "arcjet"
version = "0.4.0"
description = "Arcjet Python SDK. Bot detection, rate limiting, email validation, attack protection for Python applications."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Arcjet", email = "support@arcjet.com" }]
license = { text = "Apache-2.0" }
dependencies = [
  "connect-python>=0.8.1",
  "pyqwest>=0.3.3",
  # Explanation of upper bound:
  # https://github.com/arcjet/arcjet-py/issues/2
  "typeid-python>=0.3.3,<0.3.7",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Framework :: Flask",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Topic :: Communications :: Email :: Filters",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Networking :: Firewalls",
]
keywords = ["security", "bot-detection", "rate-limiting", "email-validation"]

[project.urls]
"homepage" = "https://arcjet.com"
"source" = "https://github.com/arcjet/arcjet-py"
"documentation" = "https://docs.arcjet.com"
"releases" = "https://github.com/arcjet/arcjet-py/releases"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "fastapi==0.128.0",                # For testing integration with FastAPI
  "flask==3.1.3",                    # For testing integration with Flask
  "griffe==1.15.0",
  "httpx>=0.28.1",                   # Used by FastAPI tests
  "pyright==1.1.408",
  "pytest==9.0.2",
  "pytest-cov>=7.0.0",
  "ruff==0.14.10",
  "ty==0.0.8",
  "types-protobuf==6.32.1.20251210",
]

[tool.pytest.ini_options]
addopts = ["-q", "--cov=src/arcjet", "--cov-report=term-missing"]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
omit = ["src/arcjet/proto/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
exclude = [
  # Generated code
  "src/arcjet/proto",
  # TODO: re-enable once we fix the issues
  "examples",
]

[tool.ruff.lint]
select = [
  "I", # Import formatting
]

[tool.pyright]
exclude = [
  "tests/mocked/conftest.py",
  "tests/mocked/test_cache.py",
  "tests/mocked/test_client_sync.py",
  "tests/mocked/test_context.py",
  "tests/mocked/test_decision.py",
  "tests/mocked/test_enums.py",
  "tests/mocked/test_logging.py",
  "tests/mocked/test_rules.py",
]
include = ["src", "tests"]
pythonVersion = "3.10"

[tool.ty.src]
exclude = [
  # TODO: re-enable once we fix the issues
  "examples",
  "tests/mocked/conftest.py",
  "tests/mocked/test_cache.py",
  "tests/mocked/test_client_sync.py",
  "tests/mocked/test_context.py",
  "tests/mocked/test_decision.py",
  "tests/mocked/test_enums.py",
  "tests/mocked/test_logging.py",
  "tests/mocked/test_rules.py",
]
