[project]
name = "arcjet"
version = "0.5.0"
description = "Arcjet Python SDK. Bot detection, rate limiting, email validation, attack protection for Python applications."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Arcjet", email = "support@arcjet.com" }]
license = { text = "Apache-2.0" }
dependencies = [
  "connect-python>=0.8.1",
  "pyqwest>=0.3.3",
  # Explanation of upper bound:
  # https://github.com/arcjet/arcjet-py/issues/2
  "typeid-python>=0.3.9,<0.3.10",
  "wasmtime>=42.0.0,<42.1.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Framework :: Flask",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Topic :: Communications :: Email :: Filters",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Networking :: Firewalls",
]
keywords = ["security", "bot-detection", "rate-limiting", "email-validation"]

[project.urls]
"homepage" = "https://arcjet.com"
"source" = "https://github.com/arcjet/arcjet-py"
"documentation" = "https://docs.arcjet.com"
"releases" = "https://github.com/arcjet/arcjet-py/releases"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "pytest-benchmark>=5.1.0",
  "fastapi==0.135.1",                # For testing integration with FastAPI
  "flask==3.1.3",                    # For testing integration with Flask
  "griffe==2.0.0",
  "httpx==0.28.1",                   # Used by FastAPI tests
  "pyright==1.1.408",
  "pytest==9.0.2",
  "pytest-cov>=7.0.0",
  "ruff==0.15.6",
  "tomli>=2.0.0; python_version < '3.11'",
  "ty==0.0.21",
  "types-protobuf==6.32.1.20260221",
]

[tool.pytest.ini_options]
addopts = ["-q", "--cov=src/arcjet", "--cov-report=term-missing", "--benchmark-disable"]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
omit = [
  # Generated protobuf code
  "src/arcjet/proto/*",
  # Generated by witgen (uv run python -m tools.witgen)
  "src/arcjet/_analyze/__init__.py",
  "src/arcjet/_analyze/_types.py",
  "src/arcjet/_analyze/_convert.py",
  "src/arcjet/_analyze/_component.py",
  "src/arcjet/_analyze/_imports.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
exclude = [
  # Generated code
  "src/arcjet/proto",
  "src/arcjet/_analyze",
  # TODO: re-enable once we fix the issues
  "examples",
]

[tool.ruff.lint]
select = [
  "F401", # Unused imports
  "I", # Import formatting
]

[tool.pyright]
exclude = [
  "tests/mocked/conftest.py",
  "tests/mocked/test_cache.py",
  "tests/mocked/test_client_sync.py",
  "tests/mocked/test_context.py",
  "tests/mocked/test_decision.py",
  "tests/mocked/test_enums.py",
  "tests/mocked/test_logging.py",
  "tests/mocked/test_rules.py",
]
include = ["src", "tests"]
pythonVersion = "3.10"

[tool.ty.src]
exclude = [
  # TODO: re-enable once we fix the issues
  "examples",
  "tests/mocked/conftest.py",
  "tests/mocked/test_cache.py",
  "tests/mocked/test_client_sync.py",
  "tests/mocked/test_context.py",
  "tests/mocked/test_decision.py",
  "tests/mocked/test_enums.py",
  "tests/mocked/test_logging.py",
  "tests/mocked/test_rules.py",
]
