[project]
name = "arcjet-analyze"
version = "0.1.0"
description = "WASM-based local analysis for the Arcjet Python SDK."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "wasmtime>=40.0.0,<41.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arcjet_analyze"]
